--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^7.4.1",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.4"
+    "socket.io-client": "^4.7.4",
+    "uuid": "^9.0.1"
   }
 }
